# 2048-bot

./: .gitignore  LICENSE  Makefile  README.md  board.hpp  game.cpp  game.hpp  heuristic_player.cpp  main.cpp  mcts_player.hpp
.github/workflows/: benchmark-8k-regression.yml  cpp-tests.yml  python-tests.yml  tests.yml
cpp/: CMakeLists.txt  README.md  baseline_results.json  baseline_results_500.json  best_eval_weights.csv  best_eval_weights.json  best_weights.csv  build_with_timing.bat  checkpoint_gen_0.csv  checkpoint_gen_5.csv  custom_params.json  eval_weights.csv  eval_weights_sweep.csv  heuristic_weights.csv  regression_check_result.json
cpp/configurations/: baseline_sim_config.json  benchmark_metrics.md  benchmark_player_config.json  benchmark_sim_config.json  best_eval_weights.json  custom_params.json  expectimax_depth5_time100.json  expectimax_depth5_time150.json  expectimax_depth6_time150.json  expectimax_tuned_weights.json  logger_config.json  player_config.json  sim_config.json  tdl_config.json
cpp/scripts/: apply_tuned_weights.sh  check_8k_regression.sh  run_benchmark.sh  run_sweep.sh
cpp/scripts/sweep_configs/: depth4_time75.json  depth5_time100.json  depth5_time50_chance4.json
cpp/src/: arg_parser.cpp  arg_parser.hpp  board.cpp  board.hpp  config.hpp  debug_config.hpp  evaluation.cpp  evaluation.hpp  expectimax_player.cpp  expectimax_player.hpp  game.cpp  game.hpp  heuristic_player.cpp  heuristic_player.hpp  logger.cpp  logger.hpp  main.cpp  mcts_player.cpp  ntuple_network.hpp  player.cpp  player.hpp  players.hpp  random_player.cpp  score_types.hpp  tdl_player.cpp  tdl_player.hpp  tune_heuristic.cpp
cpp/sweep_results/: depth4_time75.json  depth5_time100.json  depth5_time50_chance4.json  expectimax_depth5_time100.json  expectimax_depth5_time150.json  expectimax_tuned_weights.json  stability_run1.json  stability_run2.json  stability_run3.json  tuned_final_80.json  tuned_weights.json
cpp/tests/: CMakeLists.txt  board_tests.cpp  evaluation_tests.cpp  game_tests.cpp  players_tests.cpp  test_helpers.hpp
docs/: index.html  play.html
python/: README.md  pyproject.toml  setup.bat  setup.py
python/src/: benchmark.py  game.py  interfaces.py  players.py
python/src/game2048/: benchmark.py  board.py  game.py  interfaces.py  main.py
python/test/: test_game.py
python/tests/: test_benchmark.py  test_board.py  test_game.py
src/: board.py  game.py  interfaces.py  players.py
test/: conftest.py  test_board.py  test_game.py
